--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.10",
+    "babel-plugin-macros": "^3.1.0",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-ionicons": "^4.6.5",
