--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "prebuild": "npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
+    "build": "cd android && ./gradlew assembleDebug && cd ../",
+    "clear": "cd android && gradlew clean && cd ../",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
