--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-macros": "^3.1.0",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-date-picker": "^4.2.12",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-reanimated": "^3.0.2",
@@ -33,6 +34,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
+    "@types/react-native-datepicker": "^1.7.1",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
