--- a/ios/PatronLasers.xcodeproj/xcshareddata/xcschemes/PatronLasers.xcscheme
+++ b/ios/PatronLasers.xcodeproj/xcshareddata/xcschemes/PatronLasers.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "PatronProject.app"
-               BlueprintName = "PatronProject"
-               ReferencedContainer = "container:PatronProject.xcodeproj">
+               BuildableName = "PatronLasers.app"
+               BlueprintName = "PatronLasers"
+               ReferencedContainer = "container:PatronLasers.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "PatronProjectTests.xctest"
-               BlueprintName = "PatronProjectTests"
-               ReferencedContainer = "container:PatronProject.xcodeproj">
+               BuildableName = "PatronLasersTests.xctest"
+               BlueprintName = "PatronLasersTests"
+               ReferencedContainer = "container:PatronLasers.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "PatronProject.app"
-            BlueprintName = "PatronProject"
-            ReferencedContainer = "container:PatronProject.xcodeproj">
+            BuildableName = "PatronLasers.app"
+            BlueprintName = "PatronLasers"
+            ReferencedContainer = "container:PatronLasers.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "PatronProject.app"
-            BlueprintName = "PatronProject"
-            ReferencedContainer = "container:PatronProject.xcodeproj">
+            BuildableName = "PatronLasers.app"
+            BlueprintName = "PatronLasers"
+            ReferencedContainer = "container:PatronLasers.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
