--- a/ios/PatronProject/Info.plist
+++ b/ios/PatronProject/Info.plist
@@ -53,6 +53,8 @@
 	<false/>
 	<key>UIAppFonts</key>
 	<array>
+		<string>MaterialIcons.ttf</string>
+		<string>AntDesign.ttf</string>
 		<string>FontAwesome.ttf</string>
 		<string>Ionicons.ttf</string>
 		<string>Inter-Black.ttf</string>
