--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-ionicons": "^4.6.5",
     "react-native-reanimated": "^3.0.2",
     "react-native-rename": "^3.2.12",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-select-dropdown": "^3.3.2",
