--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -94,13 +94,13 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace "com.patrondev.patronlasers"
+    namespace "com.patronproject"
     defaultConfig {
-        applicationId "com.patrondev.patronlasers"
+        applicationId "com.patronproject"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "0.0.1"
     }
 
     splits {
