--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.10",
-    "axios": "^1.3.5",
+    "axios": "^1.4.0",
     "babel-plugin-macros": "^3.1.0",
     "react": "18.2.0",
     "react-native": "0.71.3",
@@ -27,6 +27,7 @@
     "react-native-ionicons": "^4.6.5",
     "react-native-reanimated": "^3.0.2",
     "react-native-rename": "^3.2.12",
+    "react-native-render-html": "^6.3.4",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
